--- a/index.html
+++ b/index.html
@@ -23,6 +23,9 @@
             <li><a href="descripcion.html">Descripcion</a></li>
             <li><a href="principal.html">Principal</a></li>
         </ul>
+        <div class="main">
+            <img id="loading" src="img/loading.webp" alt="">
+        </div>
     </div>
 </body>
 
