--- a/index.html
+++ b/index.html
@@ -24,7 +24,22 @@
             <li><a href="principal.html">Principal</a></li>
         </ul>
         <div class="main">
-            <img id="loading" src="img/loading.webp" alt="">
+            <img id="loading" src="img/loading.webp" alt="" style="width: 100px; height: 100px;">
+            <div id="pagination">
+                <span id="previous">&lt;&lt;Previous</span>
+                <span id="next">Next&gt;&gt;</span>
+            </div>
+            <section id="pkmnContainer">
+                <article>
+                    <h3>Pikachu</h3>
+                    <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/35.png" alt="">
+                    <div>
+                        <p><label>Type: </label>grass, poison</p>
+                        <p><label>Id: </label>35</p>
+                        <p><label>Exp: </label>125</p>
+                    </div>
+                </article>
+            </section>
         </div>
     </div>
 </body>
