Funciona pero no como yo quiero

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div class="container">
         <header>
             <img id="logo" src="img/pokemonLogo.png" alt="Logo">
-            <h1>Pokemon</h1>
+            <h1><img id="keepWalking" src="img/loading.gif" alt="" style="width: 200px; height: 100px;"></h1>
         </header>
         <hr>
         <i id="barras-menu" class="barras-menu fa-solid fa-bars"></i>
@@ -24,7 +24,7 @@
             <li><a href="principal.html">Principal</a></li>
         </ul>
         <div class="main">
-            <img id="loading" src="img/loading.webp" alt="" style="width: 100px; height: 100px;">
+            <img id="loading" src="img/loading.gif" alt="" style="width: 100px; height: 100px;">
             <div id="pagination">
                 <span id="previous">&lt;&lt;Previous</span>
                 <span id="next">Next&gt;&gt;</span>
