Agregados buscador por nombre y filtro por tipo

--- a/index.html
+++ b/index.html
@@ -21,14 +21,17 @@
         <ul id="menu-movil" class="menu-movil estilo-menu">
             <li><a href="autor.html">Autor</a></li>
             <li><a href="descripcion.html">Descripcion</a></li>
-            <li><a href="principal.html">Principal</a></li>
         </ul>
+        <input type="text" id="pokemonSearch" placeholder="Search..." style="margin-top: 10px;">
+        <select id="pokemonTypes">
+            <option value="">All</option>
+        </select>
         <div class="main">
-            <img id="loading" src="img/loading.webp" alt="" style="width: 100px; height: 100px;">
             <div id="pagination">
                 <span id="previous">&lt;&lt;Previous</span>
                 <span id="next">Next&gt;&gt;</span>
             </div>
+            <img id="loading" src="img/loading.webp" alt="" style="width: 100px; height: 100px;">
             <section id="pkmnContainer">
                 <img id="loading" src="img/loading.webp" alt="" style="width: 100px; height: 100px;">
             </section>
