--- a/autor.html
+++ b/autor.html
@@ -7,6 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <img src="img/loading.webp" alt="">
+    <p>Adrian Sguera</p>
+    <a href="index.html"><button>Volver</button></a>
 </body>
 </html>
