--- a/descripcion.html
+++ b/descripcion.html
@@ -7,6 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <img src="img/loading.gif" alt="">
+    <p>Una pagina de pokemons</p>
+    <a href="index.html"><button>Volver</button></a>
 </body>
 </html>
