Agregado link a repositorio en autor

--- a/autor.html
+++ b/autor.html
@@ -9,5 +9,6 @@
 <body>
     <p>Adrian Sguera</p>
     <a href="index.html"><button>Volver</button></a>
+    <a href="https://github.com/AdrianSguera/pokemonCeica.git"></a>
 </body>
 </html>
